k8s/overlays/dev/documentation/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-documentation
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 32002
