k8s/overlays/dev/documentation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentation-ingress
spec:
  rules:
  - host: docs.dev.school-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: school-documentation
            port:
              number: 80
